force-app/main/default/objects/Airport__c/fields/Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>Airport_Name__c</fullName>
    <label>Airport Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>