force-app/main/default/objects/Airport__c/fields/Number_of_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Terminals__c</fullName>
    <label>Number of Terminals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>