force-app/main/default/objects/Airport__c/fields/Runway_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Runway_Capacity__c</fullName>
    <label>Runway Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>