force-app/main/default/objects/Airport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Airport_Name__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>Number_of_Terminals__c</columns>
    <columns>Runway_Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>